@@ -67,7 +67,10 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       iteration. TRQ-1251.
   b - Fixed a bug with SIGHUP to pbs_server. The signal handler (change_logs()) does file I/O
       which is not allowed for signal interruption. This caused pbs_server to be up but
-      unresponsive to any commands. TRQ-1250 and TR!-1224
+      unresponsive to any commands. TRQ-1250 and TRQ-1224
+  b - Fix a deadlock when recording an alps reservation on the server side. Cray only. 
+      TRQ-1272.
+
 
 4.1.2
   e - Add the ability to run a single job partially on CRAY hardware and partially
